Mirrored objects render black with Blender Internal #44102

Closed
opened 2015-03-23 18:22:31 +01:00 by Aaron Corey · 12 comments

System Information

Occurs on 2 systems (both Windows 8.1). One system has a Geforce GTX745 card, and the other has an Intel integrated HD 4600 graphics.

Blender Version

Broken: Bug occurs on 2.73a and 2.74RC2
Worked: works on 2.69

Description

When a duplicated mesh object has been mirrored (with the object shading is set to smooth and auto-smooth enabled), the Blender Internal renderer renders the object completely black.

Exact steps for others to reproduce the error

  1. Add a UV Sphere and add a new material
  2. Set shading to smooth
  3. Enable auto smooth
  4. Create a linked duplicate (Alt-D) and place it beside the original sphere
  5. Mirror the duplicate about an axis (For example: Object > Mirror > X Global)
  6. Press F12 to render

The original object renders normally, but the duplicate renders as black. Even if the original object is deleted, and then the normals are recalculated on the second (remaining) object, it still renders as black. This bug appears to have similar symptoms as #40014 and #41079, which were previously fixed.

test.blend

**System Information** Occurs on 2 systems (both Windows 8.1). One system has a Geforce GTX745 card, and the other has an Intel integrated HD 4600 graphics. **Blender Version** Broken: Bug occurs on 2.73a and 2.74RC2 Worked: works on 2.69 **Description** When a duplicated mesh object has been mirrored (with the object shading is set to smooth and auto-smooth enabled), the Blender Internal renderer renders the object completely black. **Exact steps for others to reproduce the error** 1. Add a UV Sphere and add a new material 2. Set shading to smooth 3. Enable auto smooth 4. Create a linked duplicate (Alt-D) and place it beside the original sphere 5. Mirror the duplicate about an axis (For example: Object > Mirror > X Global) 6. Press F12 to render The original object renders normally, but the duplicate renders as black. Even if the original object is deleted, and then the normals are recalculated on the second (remaining) object, it still renders as black. This bug appears to have similar symptoms as #40014 and #41079, which were previously fixed. [test.blend](https://archive.blender.org/developer/F154467/test.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AaronCorey

Added subscriber: @AaronCorey
Author

I should also mention that I discovered a work-around for this issue. If you make the duplicate object single-user and then apply the scale (Object > Apply > Scale), the object will then render properly. But of course, you lose the benefit of linked duplicates if you do that. I assume that applying the scale works because mirroring the object is essentially the same as scaling it by -1 along an axis?

I should also mention that I discovered a work-around for this issue. If you make the duplicate object single-user and then apply the scale (Object > Apply > Scale), the object will then render properly. But of course, you lose the benefit of linked duplicates if you do that. I assume that applying the scale works because mirroring the object is essentially the same as scaling it by -1 along an axis?
Member

Added subscribers: @mont29, @JulianEisel

Added subscribers: @mont29, @JulianEisel
Member

Can confirm this. black_uv_sphere_bug.png Turning off "Auto Smooth" or scaling by -1/mirroring again "solves" it. It also happens for every other object with a scale < 0 [Edit: and Auto Smooth enabled]. I bet Auto Smooth doesn't like negative scales... @mont29, maybe you can have a look? Might even be related to you custom normals work.

Can confirm this. ![black_uv_sphere_bug.png](https://archive.blender.org/developer/F154503/black_uv_sphere_bug.png) Turning off "Auto Smooth" or scaling by -1/mirroring again "solves" it. It also happens for every other object with a scale < 0 [Edit: and Auto Smooth enabled]. I bet Auto Smooth doesn't like negative scales... @mont29, maybe you can have a look? Might even be related to you custom normals work.
Bastien Montagne was assigned by Julian Eisel 2015-03-23 19:40:00 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Caused by 776f8d5a6f, assigning to @mont29

Caused by 776f8d5a6f, assigning to @mont29
Author

I did a little more testing to narrow down the version where the change occurred. 2.70a renders mirrored objects correctly, but 2.71 renders them black.

I did a little more testing to narrow down the version where the change occurred. 2.70a renders mirrored objects correctly, but 2.71 renders them black.

This issue was referenced by 4685092fd8

This issue was referenced by 4685092fd8e40d523ccd6d4d2b7efe491823f07f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4685092fd8.

Closed by commit 4685092fd8.

This issue was referenced by c7dc142c1b

This issue was referenced by c7dc142c1ba56057c9281ebdd514c8412c4cf2bc
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44102
No description provided.