Fix T44102: Mirrored objects render black with Blender Internal and Autosmooth.

Normals are not vertices, we cannot apply matrix's scale to them...